<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context="com.nq.mdm.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/desc" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/hole"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/replacemdm"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="right" >
                <ImageView
                    android:id="@+id/img_replacemdm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="18dp"
                    android:visibility="gone"
                    android:src="@mipmap/right"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_replacemdm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/img_replacemdmtip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/oppo_install" />

            <Button
                android:id="@+id/btn_replacemdm"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape"
                android:text="@string/install"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/hole"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/replacemdmadmin"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="right" >
                <ImageView
                    android:id="@+id/img_replacemdmadmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="18dp"
                    android:visibility="gone"
                    android:src="@mipmap/right"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_replacemdmadmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical"
            android:visibility="gone"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_replacemdmadmintip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/oppo_install"/>

            <Button
                android:id="@+id/btn_replacemdmadmin"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="@drawable/shape"
                android:text="@string/install"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </LinearLayout>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/hole"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/installemm"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="right" >
                <ImageView
                    android:id="@+id/img_installemm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="18dp"
                    android:visibility="gone"
                    android:src="@mipmap/right"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_installemm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/img_installemmtip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/oppo_install" />

            <Button
                android:id="@+id/btn_installemm"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape"
                android:text="@string/install"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/hole"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/reboot_desc"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="right" >
                <ImageView
                    android:id="@+id/img_reboot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="18dp"
                    android:visibility="gone"
                    android:src="@mipmap/right"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_reboot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">
            <Button
                android:id="@+id/btn_reboot"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape"
                android:text="@string/reboot"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>
